--- a/src/styles/ProjectList.module.scss
+++ b/src/styles/ProjectList.module.scss
@@ -1,6 +1,7 @@
 .container {
     max-width: 1400px;
-    margin: 5rem auto;
+    margin: 0 auto;
+    padding-top: 5rem;
     h1 {
         text-align: center;
     }
